--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <a rel="ar" href="/assets/my-model.usdz">
             <img src="assets/preview.png">
         </a>
+        <h1>Click on Image to Open AR</h1>
     </div>
 </body>
 
